# android-mnn

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/sample/mnn/detect/: App.java  FaceDetectResult.java  Faceresults.java  Facetest.java  TestFaceDetectActivity.java
app/src/main/jni/: cJSON.c  cJSON.h  face_detect.cpp  face_detect.h  facedetect_jni.cpp
app/src/main/res/drawable/: ret_blue.xml  ret_stroke_blue.xml  setting_menu_bg.xml  setting_menu_text.xml
app/src/main/res/layout/: activity_test_face.xml
app/src/main/res/values/: colors.xml  dimens.xml  normal_color.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
